<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/tipCalcText"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTipCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip_calc_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/txtBillAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtBillAmount"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_bill_amount"
        app:layout_constraintBottom_toTopOf="@+id/txtTipLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipCalc" />

    <TextView
        android:id="@+id/txtTipLabel"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_tip_label"
        app:layout_constraintBottom_toTopOf="@+id/txtTotalLabel"
        app:layout_constraintEnd_toStartOf="@+id/txtTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBillAmount" />

    <TextView
        android:id="@+id/txtTotalLabel"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/txt_total_label"
        app:layout_constraintBottom_toTopOf="@+id/txtTipPercent"
        app:layout_constraintEnd_toStartOf="@+id/txtTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipLabel" />

    <TextView
        android:id="@+id/txtTotalZero"
        style="@style/tipCalcText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/zero_dollars"
        app:layout_constraintBottom_toBottomOf="@+id/txtTotalLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTotalLabel"
        app:layout_constraintTop_toTopOf="@+id/txtTotalLabel" />

    <TextView
        android:id="@+id/txtTip"
        style="@style/tipCalcText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_zero_total"
        app:layout_constraintBottom_toBottomOf="@+id/txtTipLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtTipLabel"
        app:layout_constraintTop_toTopOf="@+id/txtTipLabel" />

    <TextView
        android:id="@+id/txtTipPercent"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_tip_percent"
        app:layout_constraintBottom_toTopOf="@+id/txtRoundTotal"
        app:layout_constraintEnd_toStartOf="@+id/seekBarTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTotalLabel" />

    <TextView
        android:id="@+id/txtTipPercentLabel"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/zero_percent"
        app:layout_constraintBottom_toBottomOf="@+id/seekBarTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBarTip"
        app:layout_constraintTop_toTopOf="@+id/seekBarTip" />

    <TextView
        android:id="@+id/txtRoundTotal"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txt_round_total"
        app:layout_constraintBottom_toTopOf="@+id/buttonRoundUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipPercent" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        style="@style/tipCalcText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/txtBillAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtBillAmount"
        app:layout_constraintTop_toTopOf="@+id/txtBillAmount" />

    <SeekBar
        android:id="@+id/seekBarTip"
        style="@style/tipCalcText"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="50"
        android:progress="15"
        app:layout_constraintBottom_toBottomOf="@+id/txtTipPercent"
        app:layout_constraintEnd_toStartOf="@+id/txtTipPercentLabel"
        app:layout_constraintStart_toEndOf="@+id/txtTipPercent"
        app:layout_constraintTop_toTopOf="@+id/txtTipPercent" />

    <Button
        android:id="@+id/buttonRoundUp"
        style="@style/tipCalcText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_round_ip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRoundTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>